--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Code Notes</title>
+  <title>Notes</title>
+  <script>
+    async function loadNotes() {
+      try {
+        const response = await fetch("/get-notes");
+        const notes = await response.json();
+        const notesList = document.getElementById("notes");
+
+        Object.keys(notes).forEach(noteId => {
+          const li = document.createElement("li");
+          const link = document.createElement("a");
+          link.href = `/note/${noteId}`;
+          link.textContent = noteId;
+          li.appendChild(link);
+          notesList.appendChild(li);
+        });
+      } catch (error) {
+        console.error("Error loading notes:", error);
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", loadNotes);
+  </script>
 </head>
 <body>
-    <h1>Code Notes</h1>
-    
-    <h2>Your Notes</h2>
-    <ul>
-        {{NOTE_LINKS}}
-    </ul>
-
-    <h2>Make a New Note</h2>
-    <form action="/save" method="POST">
-        <input type="text" name="noteId" placeholder="Note ID" required><br>
-        <textarea name="content" rows="5" cols="30" placeholder="Write your note here..." required></textarea><br>
-        <input type="submit" value="Save Note">
-    </form>
-
-    <div id="auth-section">
-        {{AUTH_SECTION}}
-    </div>
+  <h1>Notes</h1>
+  <ul id="notes"></ul>
 </body>
 </html>
