--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         const notes = await response.json();
         const notesList = document.getElementById("notes");
 
+        notesList.innerHTML = ""; // Clear existing list
+
         Object.keys(notes).forEach(noteId => {
           const li = document.createElement("li");
           const link = document.createElement("a");
@@ -22,11 +24,67 @@
       }
     }
 
-    document.addEventListener("DOMContentLoaded", loadNotes);
+    async function checkLogin() {
+      try {
+        const response = await fetch("/check-login");
+        const data = await response.json();
+        const loginForm = document.getElementById("loginForm");
+        const logoutForm = document.getElementById("logoutForm");
+        const makeNoteSection = document.getElementById("makeNote");
+
+        if (data.loggedIn) {
+          loginForm.style.display = "none";
+          logoutForm.style.display = "block";
+          makeNoteSection.style.display = "block";
+        } else {
+          loginForm.style.display = "block";
+          logoutForm.style.display = "none";
+          makeNoteSection.style.display = "none";
+        }
+      } catch (error) {
+        console.error("Error checking login:", error);
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      loadNotes();
+      checkLogin();
+    });
   </script>
 </head>
 <body>
   <h1>Notes</h1>
   <ul id="notes"></ul>
+
+  <div id="makeNote" style="display: none;">
+    <h2>Make a New Note</h2>
+    <form action="/save" method="POST">
+      <input type="text" name="noteId" placeholder="Note ID" required><br>
+      <textarea name="content" rows="5" cols="30" placeholder="Write your note here..." required></textarea><br>
+      <input type="submit" value="Save Note">
+    </form>
+  </div>
+
+  <div id="loginForm">
+    <h2>Login</h2>
+    <form action="/login" method="POST">
+      <input type="text" name="username" placeholder="Username" required><br>
+      <input type="password" name="password" placeholder="Password" required><br>
+      <input type="submit" value="Login">
+    </form>
+
+    <h2>Register</h2>
+    <form action="/register" method="POST">
+      <input type="text" name="username" placeholder="Username" required><br>
+      <input type="password" name="password" placeholder="Password" required><br>
+      <input type="submit" value="Register">
+    </form>
+  </div>
+
+  <div id="logoutForm" style="display: none;">
+    <form action="/logout" method="POST">
+      <input type="submit" value="Logout">
+    </form>
+  </div>
 </body>
 </html>
