--- a/notes.html
+++ b/notes.html
@@ -14,8 +14,11 @@
                     <h1>📝 GitHub Notes</h1>
                     <h2>Saved Notes:</h2>
                     <div id="notes-container">
-                        <div class="note"><strong>undefined</strong><p>undefined</p></div><div class="note"><strong>Hdbd</strong><p>Hdhd</p></div><div class="note"><strong>Nsns</strong><p>Jsns</p></div>
+                        <div class="note"><strong>Bsvs</strong><p>Hdhd</p></div>
                     </div>
+                    <!-- NOTES_START -->
+                    [{"title":"Bsvs","content":"Hdhd"}]
+                    <!-- NOTES_END -->
                 </body>
                 </html>
             
